--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -189,41 +189,23 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
 
-ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
+ENUM_CONTENTCATEGORY_ABSTRACT = Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: beliebiger Volltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = beliebiger Volltext
 
-ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Verlagsvertrag
+ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Verlagsvertrag
 
-ENUM_CONTENTCATEGORY_CORRESPONDENCE = Deprecated: Korrespondenz
+ENUM_CONTENTCATEGORY_CORRESPONDENCE = Korrespondenz
 
-ENUM_CONTENTCATEGORY_POST_PRINT = Deprecated: Postprint
+ENUM_CONTENTCATEGORY_POST_PRINT = Postprint
 
-ENUM_CONTENTCATEGORY_PRE_PRINT = Deprecated: Preprint
+ENUM_CONTENTCATEGORY_PRE_PRINT = Preprint
 
-ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Deprecated: Verlagsversion
+ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Verlagsversion
 
-ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Deprecated: erg\u00E4nzendes Material
+ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = erg\u00E4nzendes Material
 
-ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Inhaltsverzeichnis
-
-ENUM_CONTENTCATEGORY_abstract = Zusammenfassung
-
-ENUM_CONTENTCATEGORY_any-fulltext = beliebiger Volltext
-
-ENUM_CONTENTCATEGORY_copyright-transfer-agreement = Verlagsvertrag
-
-ENUM_CONTENTCATEGORY_correspondence = Korrespondenz
-
-ENUM_CONTENTCATEGORY_post-print = Postprint
-
-ENUM_CONTENTCATEGORY_pre-print = Preprint
-
-ENUM_CONTENTCATEGORY_publisher-version = Verlagsversion
-
-ENUM_CONTENTCATEGORY_supplementary-material = Erg\u00E4nzendes Material
-
-ENUM_CONTENTCATEGORY_table-of-contents = Inhaltsverzeichnis
+ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Inhaltsverzeichnis
 
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
@@ -262,6 +244,8 @@ ENUM_CREATORTYPE_PERSON = Person
 ENUM_CRITERIA_COLLECTION = Collection
 
 ENUM_CRITERIA_CONTEXT = Name der Collection
+
+ENUM_CRITERIA_CREATION_DATE = Erstellungsdatum
 
 ENUM_CRITERIA_CREATOR = Urheber
 
@@ -1723,11 +1707,15 @@ WorkspacesPage = Arbeitsbereiche
 
 Year = Jahr
 
+YearbookArchivePage = Jahrbuch Archiv
+
 YearbookCandidatesPage = Kandidaten
 
 YearbookInvalidItemsPage = Validierungsergebnis
 
 YearbookItemCreatePage = Jahrbuch erstellen
+
+YearbookItemEditPage = Jahrbuch-Optionen
 
 YearbookMembersPage = Mitglieder
 
@@ -1737,9 +1725,13 @@ YearbookNonCandidatesPage = \u00DCbrige Datens\u00E4tze
 
 YearbookPage = Jahrbuch
 
+Yearbook_YearbookArchive = Archiv
+
 Yearbook_addToYearbook = Auswahl dem Jahrbuch hinzuf\u00FCgen
 
 Yearbook_addToYearbookViewItem = Dem Jahrbuch hinzuf\u00FCgen
+
+Yearbook_btnExport = Jahrbuch exportieren
 
 Yearbook_collaboratorUserIds = W\u00E4hlen Sie weitere Nutzer ihres Instituts, die au\u00DFer Ihnen das Jahrbuch bearbeiten d\u00FCrfen (optional)
 
@@ -1749,15 +1741,23 @@ Yearbook_createYearbook = Jahrbuch erstellen
 
 Yearbook_date = Zeitrahmen
 
+Yearbook_editYearbook = Optionen
+
+Yearbook_information = Jahrbuchinformationen
+
 Yearbook_member = Mitglied
 
 Yearbook_organization = Organisation
 
-Yearbook_releaseYearbook = Jahrbuch abschlie\u00DFen
+Yearbook_releaseYearbook = Jahrbuch freigeben
 
-Yearbook_removeFromYearbook = Auswahl aus dem Jahrbuch entfernen
+Yearbook_removeFromYearbook = Aus dem Jahrbuch entfernen
 
 Yearbook_removeFromYearbookViewItem = Aus dem Jahrbuch entfernen
+
+Yearbook_sendBackForReworkYearbook = Jahrbuch zur\u00FCcksenden
+
+Yearbook_submitYearbook = Jahrbuch abschlie\u00DFen
 
 Yearbook_title = Titel
 
