--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -189,41 +189,23 @@ ENUM_ALTERNATIVETITLETYPE_MATHML = MathML
 
 ENUM_ALTERNATIVETITLETYPE_OTHER = \u305D\u306E\u4ED6
 
-ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
+ENUM_CONTENTCATEGORY_ABSTRACT = \u8981\u65E8
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Any fulltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = \u5168\u6587\u30C6\u30AD\u30B9\u30C8\uFF08\u5168\u822C\uFF09
 
-ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Copyright transfer agreement
+ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = \u8457\u4F5C\u6A29\u8B72\u6E21\u5408\u610F\u66F8
 
-ENUM_CONTENTCATEGORY_CORRESPONDENCE = Deprecated: Correspondence
+ENUM_CONTENTCATEGORY_CORRESPONDENCE = \u66F8\u7C21
 
-ENUM_CONTENTCATEGORY_POST_PRINT = Deprecated: Postprint
+ENUM_CONTENTCATEGORY_POST_PRINT = \u30DD\u30B9\u30C8\u30D7\u30EA\u30F3\u30C8
 
-ENUM_CONTENTCATEGORY_PRE_PRINT = Deprecated: Preprint
+ENUM_CONTENTCATEGORY_PRE_PRINT = \u30D7\u30EC\u30D7\u30EA\u30F3\u30C8
 
-ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Deprecated: Publisher version
+ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = \u51FA\u7248\u793E\u7248
 
-ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Deprecated: Supplementary material
+ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = \u4ED8\u9332\u8CC7\u6599
 
-ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Table of contents
-
-ENUM_CONTENTCATEGORY_abstract = \u8981\u65E8
-
-ENUM_CONTENTCATEGORY_any-fulltext = \u5168\u6587\u30C6\u30AD\u30B9\u30C8\uFF08\u5168\u822C\uFF09
-
-ENUM_CONTENTCATEGORY_copyright-transfer-agreement = \u8457\u4F5C\u6A29\u8B72\u6E21\u5408\u610F\u66F8
-
-ENUM_CONTENTCATEGORY_correspondence = \u66F8\u7C21
-
-ENUM_CONTENTCATEGORY_post-print = \u30DD\u30B9\u30C8\u30D7\u30EA\u30F3\u30C8
-
-ENUM_CONTENTCATEGORY_pre-print = \u30D7\u30EC\u30D7\u30EA\u30F3\u30C8
-
-ENUM_CONTENTCATEGORY_publisher-version = \u51FA\u7248\u793E\u7248
-
-ENUM_CONTENTCATEGORY_supplementary-material = \u4ED8\u9332\u8CC7\u6599
-
-ENUM_CONTENTCATEGORY_table-of-contents = \u76EE\u6B21
+ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = \u76EE\u6B21
 
 ENUM_CREATORROLE_ADVISOR = \u5B66\u4F4D\u8AD6\u6587\u4E3B\u67FB
 
@@ -262,6 +244,8 @@ ENUM_CREATORTYPE_PERSON = \u500B\u4EBA
 ENUM_CRITERIA_COLLECTION = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 ENUM_CRITERIA_CONTEXT = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D
+
+ENUM_CRITERIA_CREATION_DATE = Creation Date
 
 ENUM_CRITERIA_CREATOR = \u4F5C\u8005
 
@@ -1697,11 +1681,15 @@ WorkspacesPage = \u7BA1\u7406\u753B\u9762
 
 Year = \u520A\u884C\u5E74
 
+YearbookArchivePage = Yearbook Archive
+
 YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Validation Result
 
 YearbookItemCreatePage = Create Yearbook
+
+YearbookItemEditPage = Yearbook Options
 
 YearbookMembersPage = Members
 
@@ -1711,9 +1699,13 @@ YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
 
+Yearbook_YearbookArchive = Archive
+
 Yearbook_addToYearbook = Add selected to Yearbook
 
 Yearbook_addToYearbookViewItem = Add to Yearbook
+
+Yearbook_btnExport = export yearbook
 
 Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
@@ -1722,6 +1714,10 @@ Yearbook_contextIds = Collections
 Yearbook_createYearbook = Create Yearbook
 
 Yearbook_date = Time Frame
+
+Yearbook_editYearbook = Options
+
+Yearbook_information = Yearbook Information
 
 Yearbook_member = Member
 
@@ -1732,6 +1728,10 @@ Yearbook_releaseYearbook = Close Yearbook
 Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
+
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
+Yearbook_submitYearbook = Submit Yearbook
 
 Yearbook_title = Title
 
@@ -1973,6 +1973,8 @@ adv_search_lblFileAvailable_YES = [NEW] Yes
 
 #Date
 adv_search_lblFrom = \u958B\u59CB\u65E5(YYYY-MM-DD)
+
+adv_search_lblInclHistory = \u65E7\u540D\u30FB\u65B0\u540D\u3092\u542B\u3080
 
 adv_search_lblLanguage = \u8CC7\u6599\u306E\u8A00\u8A9E
 
