--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -191,7 +191,7 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = beliebiger Volltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Volltext
 
 ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Verlagsvertrag
 
@@ -566,7 +566,7 @@ ENUM_STATE_SUBMITTED = Eingestellt
 
 ENUM_STATE_WITHDRAWN = Verworfen
 
-ENUM_VISIBILITY_AUDIENCE = Eingeschr\u00E4nkt
+ENUM_VISIBILITY_AUDIENCE = NIMS Only
 
 ENUM_VISIBILITY_PRIVATE = Privat
 
