--- a/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
@@ -191,7 +191,7 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Other
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Any fulltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Fulltext
 
 ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Copyright transfer agreement
 
@@ -566,7 +566,7 @@ ENUM_STATE_SUBMITTED = Submitted
 
 ENUM_STATE_WITHDRAWN = Discarded
 
-ENUM_VISIBILITY_AUDIENCE = Restricted
+ENUM_VISIBILITY_AUDIENCE = NIMS Only
 
 ENUM_VISIBILITY_PRIVATE = Private
 
@@ -850,7 +850,7 @@ Home_Header_LastItems = Most Recently Released Items
 
 Home_Header_LastItems_Disabled = Last items feed disabled due to non-productive environment
 
-Home_Header_News = Latest News on MPG.PuRe
+Home_Header_News = Latest News on PubMan
 
 Home_Header_News_Disabled = News disabled due to non-productive environment
 
@@ -962,7 +962,7 @@ NoSearchResultListPage = No Search Results
 
 NoSearchResultsPage = No search results
 
-Pubman_browserTitle = MPG.PuRe
+Pubman_browserTitle = PubMan
 
 Pubman_descriptionMetaTag = PubMan - an eSciDoc solution for publication data management
 
