--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -193,7 +193,7 @@ ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Resumen
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Cualquier texto completo
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Fulltext
 
 ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Acuerdo de transferencia de copyright
 
@@ -547,7 +547,7 @@ ENUM_STATE_SUBMITTED = Enviado
 
 ENUM_STATE_WITHDRAWN = Retirado
 
-ENUM_VISIBILITY_AUDIENCE = Restringido
+ENUM_VISIBILITY_AUDIENCE = NIMS Only
 
 ENUM_VISIBILITY_PRIVATE = Privado
 
