--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -191,39 +191,23 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Otro
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Any fulltext
+ENUM_CONTENTCATEGORY_ABSTRACT = Resumen
 
-ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Copyright transfer agreement
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Cualquier texto completo
 
-ENUM_CONTENTCATEGORY_CORRESPONDENCE = Deprecated: Correspondence
+ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Acuerdo de transferencia de copyright
 
-ENUM_CONTENTCATEGORY_POST_PRINT = Deprecated: Postprint
+ENUM_CONTENTCATEGORY_CORRESPONDENCE = Correspondencia
 
-ENUM_CONTENTCATEGORY_PRE_PRINT = Deprecated: Preprint
+ENUM_CONTENTCATEGORY_POST_PRINT = Postprint
 
-ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Deprecated: Publisher version
+ENUM_CONTENTCATEGORY_PRE_PRINT = Preprint
 
-ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Deprecated: Supplementary material
+ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Versi\u00F3n del editor 
 
-ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Table of contents
+ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Material suplementario 
 
-ENUM_CONTENTCATEGORY_abstract = Resumen 
-
-ENUM_CONTENTCATEGORY_any-fulltext = Cualquier texto completo 
-
-ENUM_CONTENTCATEGORY_copyright-transfer-agreement = Acuerdo de transferencia de copyright
-
-ENUM_CONTENTCATEGORY_correspondence = Correspondencia
-
-ENUM_CONTENTCATEGORY_post-print = Postprint
-
-ENUM_CONTENTCATEGORY_pre-print = Preprint
-
-ENUM_CONTENTCATEGORY_publisher-version = Versi\u00F3n del editor 
-
-ENUM_CONTENTCATEGORY_supplementary-material = Material suplementario 
-
-ENUM_CONTENTCATEGORY_table-of-contents = \u00CDndice de contenidos 
+ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS =\u00CDndice de contenidos
 
 ENUM_CREATORROLE_ADVISOR = Asesor 
 
@@ -262,6 +246,8 @@ ENUM_CREATORTYPE_PERSON = Persona
 ENUM_CRITERIA_COLLECTION = Colecci\u00F3n
 
 ENUM_CRITERIA_CONTEXT = Nombre de la Colecci\u00F3n
+
+ENUM_CRITERIA_CREATION_DATE = Creation Date
 
 ENUM_CRITERIA_CREATOR = Creador
 
@@ -1710,11 +1696,15 @@ WithdrawItem_lnkWithdraw = Retirar
 
 WorkspacesPage = Workspaces
 
+YearbookArchivePage = Yearbook Archive
+
 YearbookCandidatesPage = Candidates
 
 YearbookInvalidItemsPage = Validation Result
 
 YearbookItemCreatePage = Create Yearbook
+
+YearbookItemEditPage = Yearbook Options
 
 YearbookMembersPage = Members
 
@@ -1724,9 +1714,13 @@ YearbookNonCandidatesPage = Non Candidates
 
 YearbookPage = Yearbook
 
+Yearbook_YearbookArchive = Archive
+
 Yearbook_addToYearbook = Add selected to Yearbook
 
 Yearbook_addToYearbookViewItem = Add to Yearbook
+
+Yearbook_btnExport = export yearbook
 
 Yearbook_collaboratorUserIds = Choose further users from your institute who are allowed to collaborate on the yearbook  (optional)
 
@@ -1735,6 +1729,10 @@ Yearbook_contextIds = Collections
 Yearbook_createYearbook = Create Yearbook
 
 Yearbook_date = Time Frame
+
+Yearbook_editYearbook = Options
+
+Yearbook_information = Yearbook Information
 
 Yearbook_member = Member
 
@@ -1745,6 +1743,10 @@ Yearbook_releaseYearbook = Close Yearbook
 Yearbook_removeFromYearbook = Remove selected from Yearbook
 
 Yearbook_removeFromYearbookViewItem = Remove from Yearbook
+
+Yearbook_sendBackForReworkYearbook = Revise Yearbook
+
+Yearbook_submitYearbook = Submit Yearbook
 
 Yearbook_title = Title
 
