--- a/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_es.properties
@@ -191,23 +191,39 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Otro
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
-ENUM_CONTENTCATEGORY_ABSTRACT = Resumen
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Fulltext
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Fulltext
+ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Copyright transfer agreement
 
-ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Acuerdo de transferencia de copyright
+ENUM_CONTENTCATEGORY_CORRESPONDENCE = Deprecated: Correspondence
 
-ENUM_CONTENTCATEGORY_CORRESPONDENCE = Correspondencia
+ENUM_CONTENTCATEGORY_POST_PRINT = Deprecated: Postprint
 
-ENUM_CONTENTCATEGORY_POST_PRINT = Postprint
+ENUM_CONTENTCATEGORY_PRE_PRINT = Deprecated: Preprint
 
-ENUM_CONTENTCATEGORY_PRE_PRINT = Preprint
+ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Deprecated: Publisher version
 
-ENUM_CONTENTCATEGORY_PUBLISHER_VERSION = Versi\u00F3n del editor 
+ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Deprecated: Supplementary material
 
-ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Material suplementario 
+ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Table of contents
 
-ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS =\u00CDndice de contenidos
+ENUM_CONTENTCATEGORY_abstract = Resumen 
+
+ENUM_CONTENTCATEGORY_any-fulltext = Fulltext
+
+ENUM_CONTENTCATEGORY_copyright-transfer-agreement = Acuerdo de transferencia de copyright
+
+ENUM_CONTENTCATEGORY_correspondence = Correspondencia
+
+ENUM_CONTENTCATEGORY_post-print = Postprint
+
+ENUM_CONTENTCATEGORY_pre-print = Preprint
+
+ENUM_CONTENTCATEGORY_publisher-version = Versi\u00F3n del editor 
+
+ENUM_CONTENTCATEGORY_supplementary-material = Material suplementario 
+
+ENUM_CONTENTCATEGORY_table-of-contents = \u00CDndice de contenidos 
 
 ENUM_CREATORROLE_ADVISOR = Asesor 
 
