Former-commit-id: ffa535e8c506c32b221ad54b6bd51d6e63ffd510

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -699,6 +699,17 @@ toolsOverview = Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbar
 toolsMoreInformation =  Weitere Informationen finden Sie unter:
 
 #
+# UserAccountOptions
+#
+userAccountOptions_UserInformation = \u00DCberblick \u00FCber die Nutzerdaten
+
+userAccountOptions_PasswordUpdated = Passwort wurde ge\u00E4ndert!
+
+userAccountOptions_DifferentPasswords = Die Passw\u00F6rter sind nicht identisch!
+
+userAccountOptions_emptyPassword = Ihr Passwort konnte nicht aktualisiert werden, da es leer war!
+
+#
 # Common
 #
 welcome = Willkommen
