--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -708,6 +708,17 @@ toolsOverview = Here is an overview of the available tools and interfaces.
 toolsMoreInformation = Further information can be found here:
 
 #
+# UserAccountOptions
+#
+userAccountOptions_UserInformation = Overview over the user account
+
+userAccountOptions_PasswordUpdated = Password changed!
+
+userAccountOptions_DifferentPasswords = The passwords are not identically!
+
+userAccountOptions_emptyPassword = Your password couldn\u0039t be updated, because it was empty!
+
+#
 # Common
 #
 welcome = Welcome
