--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -704,6 +704,17 @@ toolsOverview = PubMan\u3067\u4f7f\u3048\u308b\u8ffd\u52a0\u30b5\u30fc\u30d3\u30
 toolsMoreInformation = \u8a73\u7d30\u306f\u4ee5\u4e0b\u306e\u30da\u30fc\u30b8\u3092\u3054\u89a7\u304f\u3060\u3055\u3044: 
 
 #
+# UserAccountOptions
+#
+userAccountOptions_UserInformation = Overview over the user account
+
+userAccountOptions_PasswordUpdated = Password changed!
+
+userAccountOptions_DifferentPasswords = The passwords are not identically!
+
+userAccountOptions_emptyPassword = Your password couldn\u0039t be updated, because it was empty!
+
+#
 # Common
 #
 welcome = Welcome
