--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -1125,6 +1125,22 @@ Tools_lblValidationServiceHead = Validation service
 
 Tools_lblValidationServiceText = Check your XML data for formal correctness.
 
+#
+# UserAccountOptions
+#
+UserAccountOptions = User Account Information
+
+UserAccountOptions_lblChangePassword = Change Password
+
+UserAccountOptions_lblNewPassword = New password
+
+UserAccountOptions_lblButtonUpdatePassword = change password
+
+UserAccountOptions_lblRepeatNewPassword = Repeat password
+
+#
+# ViewItemFull
+#
 ViewItemFull_btnFileSection = Files
 
 ViewItemFull_btnItemRevisions = Revisions
