--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -1123,8 +1123,24 @@ Tools_lblValidationService = Validierungsservice
 
 Tools_lblValidationServiceHead = Validierungsservice
 
-Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit. 
+Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit.
+ 
+#
+# UserAccountOptions
+#
+UserAccountOptions = Nutzerinformationen
 
+UserAccountOptions_lblChangePassword = Passwort \u00E4ndern
+
+UserAccountOptions_lblNewPassword = Neues Passwort
+
+UserAccountOptions_lblButtonUpdatePassword = Passwort \u00E4ndern
+
+UserAccountOptions_lblRepeatNewPassword = Passwort wiederholen
+
+#
+# ViewItemFull
+#
 ViewItemFull_btnFileSection = Dateien
 
 ViewItemFull_btnItemRevisions = Revisionen
