--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -1102,6 +1102,22 @@ Tools_lblValidationServiceHead = \u30C7\u30FC\u30BF\u691C\u8A3C\u30B5\u30FC\u30D
 
 Tools_lblValidationServiceText = \u5165\u529B\u3057\u305F\u6587\u732EXML\u30C7\u30FC\u30BF\u306E\u5185\u5BB9\u304C\u3042\u3063\u3066\u3044\u308B\u304B\u691C\u8A3C\u3057\u307E\u3059\u3002
 
+#
+# UserAccountOptions
+#
+UserAccountOptions = User Account Information
+
+UserAccountOptions_lblChangePassword = Change Password
+
+UserAccountOptions_lblNewPassword = New password
+
+UserAccountOptions_lblButtonUpdatePassword = change password
+
+UserAccountOptions_lblRepeatNewPassword = Repeat password
+
+#
+# ViewItemFull
+#
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
 ViewItemFull_btnItemRevisions = \u6539\u8A02\u7248\u3092\u8868\u793A
