--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -1125,6 +1125,22 @@ Tools_lblValidationServiceHead = Validierungsservice
 
 Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Richtigkeit. 
 
+#
+# UserAccountOptions
+#
+UserAccountOptions = Nutzerinformationen
+
+UserAccountOptions_lblChangePassword = Passwort \u00E4ndern
+
+UserAccountOptions_lblNewPassword = Neues Passwort
+
+UserAccountOptions_lblButtonUpdatePassword = Passwort \u00E4ndern
+
+UserAccountOptions_lblRepeatNewPassword = Passwort wiederholen
+
+#
+# ViewItemFull
+#
 ViewItemFull_btnFileSection = Dateien
 
 ViewItemFull_btnItemRevisions = Revisionen
