--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_ja.properties
@@ -1102,6 +1102,22 @@ Tools_lblValidationServiceHead = Validation service
 
 Tools_lblValidationServiceText = Check your XML data for formal correctness.
 
+#
+# UserAccountOptions
+#
+UserAccountOptions = User Account Information
+
+UserAccountOptions_lblChangePassword = Change Password
+
+UserAccountOptions_lblNewPassword = New password
+
+UserAccountOptions_lblButtonUpdatePassword = change password
+
+UserAccountOptions_lblRepeatNewPassword = Repeat password
+
+#
+# ViewItemFull
+#
 ViewItemFull_btnFileSection = \u30D5\u30A1\u30A4\u30EB
 
 ViewItemFull_btnItemRevisions = \u6539\u8A02\u7248\u3092\u8868\u793A
