-Bugfixes for new advanced search -PUBMAN-2273 fixed: New CoNE-Entries for journals appear as "null" when chosen in item. Occurs in IE. -PUBMAN-2368 fixed: integrate "eDoc AEI" schema within general eDoc multiple import
Former-commit-id: 7d3243aeb78919dfae918b450381da58c4b56dce

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Abbrechen
 
 AdvancedSearchPage = Detailsuche 
 
-AdvancedSearchPageNew = Erweiterte Suche
+AdvancedSearchPageOld = Erweiterte Suche
 
 AffiliationDetailAlternativeTitle = Alternativer Titel
 
@@ -1130,11 +1130,11 @@ Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Rich
 #
 UserAccountOptions = Nutzerinformationen
 
+UserAccountOptions_lblButtonUpdatePassword = Passwort \u00E4ndern
+
 UserAccountOptions_lblChangePassword = Passwort \u00E4ndern
 
 UserAccountOptions_lblNewPassword = Neues Passwort
-
-UserAccountOptions_lblButtonUpdatePassword = Passwort \u00E4ndern
 
 UserAccountOptions_lblRepeatNewPassword = Passwort wiederholen
 
