--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Cancelar
 
 AdvancedSearchPage = B\u00FAsqueda avanzada
 
-AdvancedSearchPageNew = [NEW] Advanced Search
+AdvancedSearchPageOld = [NEW] Advanced Search
 
 AffiliationDetailAlternativeTitle = T\u00EDtulo alternativo
 
@@ -1118,11 +1118,11 @@ Tools_lblValidationServiceText = Check your XML data for formal correctness.
 #
 UserAccountOptions = User Account Information
 
+UserAccountOptions_lblButtonUpdatePassword = change password
+
 UserAccountOptions_lblChangePassword = Change Password
 
 UserAccountOptions_lblNewPassword = New password
-
-UserAccountOptions_lblButtonUpdatePassword = change password
 
 UserAccountOptions_lblRepeatNewPassword = Repeat password
 
