--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_ja.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
 AdvancedSearchPage = \u8A73\u7D30\u691C\u7D22
 
-AdvancedSearchPageNew = [NEW] Advanced Search
+AdvancedSearchPageOld = [NEW] Advanced Search
 
 AffiliationDetailAlternativeTitle = \u305D\u306E\u4ED6\u306E\u30BF\u30A4\u30C8\u30EB
 
@@ -1107,11 +1107,11 @@ Tools_lblValidationServiceText = \u5165\u529B\u3057\u305F\u6587\u732EXML\u30C7\u
 #
 UserAccountOptions = User Account Information
 
+UserAccountOptions_lblButtonUpdatePassword = change password
+
 UserAccountOptions_lblChangePassword = Change Password
 
 UserAccountOptions_lblNewPassword = New password
-
-UserAccountOptions_lblButtonUpdatePassword = change password
 
 UserAccountOptions_lblRepeatNewPassword = Repeat password
 
