--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Cancel
 
 AdvancedSearchPage = Advanced Search
 
-AdvancedSearchPageNew = [NEW] Advanced Search
+AdvancedSearchPageOld = [NEW] Advanced Search
 
 AffiliationDetailAlternativeTitle = Alternative Title
 
@@ -1130,11 +1130,11 @@ Tools_lblValidationServiceText = Check your XML data for formal correctness.
 #
 UserAccountOptions = User Account Information
 
+UserAccountOptions_lblButtonUpdatePassword = change password
+
 UserAccountOptions_lblChangePassword = Change Password
 
 UserAccountOptions_lblNewPassword = New password
-
-UserAccountOptions_lblButtonUpdatePassword = change password
 
 UserAccountOptions_lblRepeatNewPassword = Repeat password
 
