--- a/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/opensource/Label_de.properties
@@ -44,7 +44,7 @@ AcceptItem_lnkCancel = Abbrechen
 
 AdvancedSearchPage = Detailsuche 
 
-AdvancedSearchPageNew = Erweiterte Suche
+AdvancedSearchPageOld = Erweiterte Suche
 
 AffiliationDetailAlternativeTitle = Alternativer Titel
 
@@ -1130,11 +1130,11 @@ Tools_lblValidationServiceText = Pr\u00FCfen Sie Ihre XML-Daten auf formale Rich
 #
 UserAccountOptions = Nutzerinformationen
 
+UserAccountOptions_lblButtonUpdatePassword = Passwort \u00E4ndern
+
 UserAccountOptions_lblChangePassword = Passwort \u00E4ndern
 
 UserAccountOptions_lblNewPassword = Neues Passwort
-
-UserAccountOptions_lblButtonUpdatePassword = Passwort \u00E4ndern
 
 UserAccountOptions_lblRepeatNewPassword = Passwort wiederholen
 
