Message if parenthesis in search are opened, but not closes
Former-commit-id: 43736c248730042135f209c586e2526507483f9a

--- a/pubman/pubman_presentation/src/main/resources/Messages_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_de.properties
@@ -244,11 +244,13 @@ UnknownLanguageCode = Der eingegebene Sprachcode existiert nicht in ISO639-3
 
 UploadFileNotProvided = Bitte w\u00E4hlen Sie eine Datei aus
 
-ViewItemFull_latestMessage = Letzte Nachricht:
+ViewItemFull_browse_to_item_not_in_range = Der eingegebene Wert existiert nicht
 
 ViewItemFull_inRevision = Dieser Datensatz ist in \u00DCberarbeitung! Letzte Nachricht:
 
 ViewItemFull_invalidID = Das Item mit dem Identifikator $1 konnte nicht gefunden werden.
+
+ViewItemFull_latestMessage = Letzte Nachricht:
 
 ViewItemFull_noPermission = Sie haben leider keine Berechtigung diese Version des Datensatzes zu sehen.
 
@@ -257,8 +259,6 @@ ViewItemFull_submitted = Dieser Datensatz ist eingestellt. Letzte Nachricht:
 ViewItemFull_user_has_no_context = Sie haben keine Privilegien um Datens\u00E4tze anzulegen.
 
 ViewItemFull_withdrawn = Dieser Datensatz wurde verworfen!
-
-ViewItemFull_browse_to_item_not_in_range = Der eingegebene Wert existiert nicht
 
 #
 # View Item
@@ -282,11 +282,11 @@ Yearbook_ReleaseError = Fehler beim Abschlie\u00DFen des Jahrbuchs
 
 Yearbook_ReleasedSuccessfully = Jahrbuch wurde erfolgreich abgeschlossen.
 
+Yearbook_RemovedItemsFromYearbook = Datensatz/Datens\u00E4tze aus dem Jahrbuch entfernt
+
 Yearbook_SubmitError = Fehler beim Abschlie\u00DFen des Jahrbuchs
 
 Yearbook_SubmittedSuccessfully = Jahrbuch wurde erfolgreich abgeschlossen
-
-Yearbook_RemovedItemsFromYearbook = Datensatz/Datens\u00E4tze aus dem Jahrbuch entfernt
 
 Yearbook_allItemsValid = Alle Datens\u00E4tze sind valide.
 
@@ -294,29 +294,29 @@ Yearbook_createdSuccessfully = Jahrbuch wurde erfolgreich erstellt und kann nun 
 
 Yearbook_creationError = Fehler beim Erstellen des Jahrbuchs oder zugeh\u00F6rigen User-Group. Bitte probieren Sie es sp\u00E4ter noch einmal oder kontaktieren Sie den Pubman Support.
 
-Yearbook_grantsAdded = Rechte f\u00FCr weitere Nutzer wurden erfolgfreich erstellt
-
-Yearbook_noYearbookFound = Es wurde kein Jahrbuch f\u00FCr Ihr Institut gefunden
-
-Yearbook_deleteError = Fehler beim Löschen des Jahrbuchs
+Yearbook_deleteError = Fehler beim L\u00C3\u00B6schen des Jahrbuchs
 
 Yearbook_editError = Fehler beim Editieren des Jahrbuchs
 
-Yearbook_noArchivedItems = Es wurden keine archivierten Jahrb\u00FCcher gefunden
-
-Yearbook_sendBackForReworkError = Fehler beim Zur\u00FCcksenden
+Yearbook_grantsAdded = Rechte f\u00FCr weitere Nutzer wurden erfolgfreich erstellt
 
 Yearbook_itemNotReleasedWarning = konnte aufgrund seines Zustands nicht ver\u00F6ffentlicht werden
 
 Yearbook_itemNotSentBackWarning = konnte aufgrund seines Zustands nicht zur\u00FCckgesendet werden
 
-Yearbook_revisedSuccessfully = Jahrburch wurde erfolgreich zur \u00DCberarbeitung zur\u00FCckgesendet
+Yearbook_loadArchive = Um vergangene Jahrb\u00FCcher einzusehen, besuchen Sie das 
+
+Yearbook_noArchivedItems = Es wurden keine archivierten Jahrb\u00FCcher gefunden
+
+Yearbook_noItemsSelected = Sie haben keine Auswahl getroffen
+
+Yearbook_noYearbookFound = Es wurde kein Jahrbuch f\u00FCr Ihr Institut gefunden
 
 Yearbook_reinitializeError = Das Jahrbuch konnte nicht neu geladen werden, und ist daher m\u00F6glicherwei\u00DFe nicht akutell
 
-Yearbook_loadArchive = Um vergangene Jahrb\u00FCcher einzusehen, besuchen Sie das 
+Yearbook_revisedSuccessfully = Jahrburch wurde erfolgreich zur \u00DCberarbeitung zur\u00FCckgesendet
 
-Yearbook_noItemsSelected = Sie haben keine Auswahl getroffen
+Yearbook_sendBackForReworkError = Fehler beim Zur\u00FCcksenden
 
 basket_ItemsChanged = Datens\u00E4tze haben ihren Status so ver\u00E4ndert dass Sie nicht mehr befugt sind die aktuellste Version zu sehen. Diese Datens\u00E4tze wurden vor\u00FCbergehend aus der Ablage entfernt bis sie wieder zur Verf\u00FCgung stehen.
 
@@ -353,6 +353,8 @@ deleteItemsFromBasket_NoItemSelected = Bitte w\u00E4hlen Sie mindestens einen Da
 #
 deleteMessage = M\u00F6chten Sie diesen Datensatz wirklich l\u00F6schen?
 
+depositorWE_noOpenContextsAvailable = Es ist kein ge\u00F6ffneter Kontext verf\u00FCgbar.
+
 depositorWS_ManyItemsSelected = Bitte w\u00E4hlen Sie einen einzelnen Datensatz aus.
 
 depositorWS_NoItemSelected = Bitte w\u00E4hlen Sie einen Datensatz aus.
@@ -388,8 +390,6 @@ depositorWS_sortingNotSupported = Das ausgew\u00E4hlte Sortierkriterium '$1' ist
 depositorWS_valNoItemsMsg = Sie haben keine Datens\u00E4tze im gew\u00E4hlten Status.
 
 depositorWS_wrongItemState = Ein oder mehrere Datens\u00E4tze m\u00FCssen zum Ausf\u00FChren der gew\u00E4hlen Aktion korrigiert werden.
-
-depositorWE_noOpenContextsAvailable = Es ist kein ge\u00F6ffneter Kontext verf\u00FCgbar.
 
 easy_submission_ExternalLocators = Zus\u00E4tzlich k\u00F6nnen Sie hier die URL zu extern abgelegtem Supplementary Material angeben.
 
@@ -686,26 +686,28 @@ searchResultList_QueryString = Ihre exakte Suche war:
 
 search_NoCriteria = Es wurden keine Suchkriterien angegeben. Bitte geben Sie Suchkriterien an.
 
+search_ParenthesisNotClosed = [NEW] Bitte schlie\u00DFen Sie ge\u00F6ffnete Klammern
+
 # Search Error
 search_ParseError = Der Suchausdruck enth\u00E4lt unzul\u00E4ssige Zeichen z. B. ", * oder ?
 
 search_TechnicalError = Technischer Fehler bei der Bearbeitung der Suche aufgetreten
+
+toolsMoreInformation = Weitere Informationen finden Sie unter:
 
 #
 # Tools
 #
 toolsOverview = Hier finden Sie eine \u00DCbersicht \u00FCber die verf\u00FCgbaren Werkzeuge und Schnittstellen. 
 
-toolsMoreInformation =  Weitere Informationen finden Sie unter:
+userAccountOptions_DifferentPasswords = Die Passw\u00F6rter sind nicht identisch!
+
+userAccountOptions_PasswordUpdated = Passwort wurde ge\u00E4ndert!
 
 #
 # UserAccountOptions
 #
 userAccountOptions_UserInformation = \u00DCberblick \u00FCber die Nutzerdaten
-
-userAccountOptions_PasswordUpdated = Passwort wurde ge\u00E4ndert!
-
-userAccountOptions_DifferentPasswords = Die Passw\u00F6rter sind nicht identisch!
 
 userAccountOptions_emptyPassword = Ihr Passwort konnte nicht aktualisiert werden, da es leer war!
 
