--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -250,11 +250,13 @@ UnknownLanguageCode = The given language code does not exist in ISO639-3
 
 UploadFileNotProvided = Please select a file
 
-ViewItemFull_latestMessage = Latest Message:
+ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 ViewItemFull_inRevision = This item is in rework! Last message:
 
 ViewItemFull_invalidID = The item with the identifier $1 could not be found.
+
+ViewItemFull_latestMessage = Latest Message:
 
 ViewItemFull_noPermission = Sorry, you have no permission to view this item version.
 
@@ -263,8 +265,6 @@ ViewItemFull_submitted = This item is submitted! Last message:
 ViewItemFull_user_has_no_context = You do not have privileges to create an item.
 
 ViewItemFull_withdrawn = This item is discarded!
-
-ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 #
 # View Item
@@ -288,11 +288,11 @@ Yearbook_ReleaseError = Error while closing Yearbook
 
 Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
+Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
+
 Yearbook_SubmitError = Error while submitting Yearbook
 
 Yearbook_SubmittedSuccessfully = Yearbook was submitted successfully.
-
-Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
 Yearbook_allItemsValid = All Items are valid
 
@@ -300,29 +300,29 @@ Yearbook_createdSuccessfully = Yearbook was created successfully and can now be 
 
 Yearbook_creationError = Error while creating Yearbook or the related User-Group. Please try again later or contact Pubman Support.
 
-Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
-
-Yearbook_noYearbookFound = No yearbook for your institute was found.
-
 Yearbook_deleteError = Error while trying to delete the yearbook
 
 Yearbook_editError = Error while trying to edit the yearbook
 
-Yearbook_noArchivedItems = No archived yearbooks were found
-
-Yearbook_sendBackForReworkError = Error while trying to send back for rework
+Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
 
 Yearbook_itemNotReleasedWarning = could not be released due to its state
 
-Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
-
 Yearbook_itemNotSentBackWarning = could not be sent back for rework due to its state
-
-Yearbook_reinitializeError = the yearbook could not be reinitialized correctly and thus could possibly be not actual
 
 Yearbook_loadArchive = To view previous yearbooks, please visit the 
 
+Yearbook_noArchivedItems = No archived yearbooks were found
+
 Yearbook_noItemsSelected = You have not made any selection
+
+Yearbook_noYearbookFound = No yearbook for your institute was found.
+
+Yearbook_reinitializeError = the yearbook could not be reinitialized correctly and thus could possibly be not actual
+
+Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
+
+Yearbook_sendBackForReworkError = Error while trying to send back for rework
 
 basket_ItemsChanged = item(s) have changed their state in a way that you are not allowed to see the latest version any more. These items have been removed temporarily from your basket until the latest version is available again.
 
@@ -359,6 +359,8 @@ deleteItemsFromBasket_NoItemSelected = Please select at least one item.
 #
 deleteMessage = Do you really want to delete this item?
 
+depositorWE_noOpenContextsAvailable = No open context available.
+
 depositorWS_ManyItemsSelected = Please select a single item.
 
 depositorWS_NoItemSelected = Please select an item.
@@ -394,8 +396,6 @@ depositorWS_sortingNotSupported = The selected sorting criteria '$1' is currentl
 depositorWS_valNoItemsMsg = You have no items in the selected state.
 
 depositorWS_wrongItemState = One or more items are in the wrong state for this action.
-
-depositorWE_noOpenContextsAvailable = No open context available.
 
 easy_submission_ExternalLocators = In addition you can reference externally located supplementary material by providing the URL below.
 
@@ -695,28 +695,30 @@ searchResultList_QueryString = Your exact query was:
 
 search_NoCriteria = No search criteria have been provided. Please use valid search critera and repeat.
 
+search_ParenthesisNotClosed = [NEW] Please close opened parenthesis
+
 # Search Error
 search_ParseError = Search expression contains illegal characters e. g. ", * or ? at first position.
 
 search_TechnicalError = Technical error while processing the search query
+
+toolsMoreInformation = Further information can be found here:
 
 #
 # Tools
 #
 toolsOverview = Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = Further information can be found here:
+userAccountOptions_DifferentPasswords = The passwords are not identically!
+
+userAccountOptions_PasswordUpdated = Password changed!
 
 #
 # UserAccountOptions
 #
 userAccountOptions_UserInformation = Overview over the user account
 
-userAccountOptions_PasswordUpdated = Password changed!
-
-userAccountOptions_DifferentPasswords = The passwords are not identically!
-
-userAccountOptions_emptyPassword = Your password couldn\u0039t be updated, because it was empty!
+userAccountOptions_emptyPassword = Your password couldn9t be updated, because it was empty!
 
 #
 # Common
