--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -212,19 +212,19 @@ TotalNumberOfPagesNotProvided = The total number of pages must be provided
 
 UploadFileNotProvided = NEW: Please select a file
 
-ViewItemFull_latestMessage = Latest Message:
+ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 ViewItemFull_inRevision = \u00A1Este item est\u00E1 siendo revisado! \u00DAltimo mensaje:
 
 ViewItemFull_invalidID = No se ha podido encontrar el item con el identificador $1.
+
+ViewItemFull_latestMessage = Latest Message:
 
 ViewItemFull_submitted = \u00A1Este item est\u00E1 enviado! \u00DAltimo mensaje:
 
 ViewItemFull_user_has_no_context = Usted no est\u00E1 autorizado para crear un item.
 
 ViewItemFull_withdrawn = \u00A1Este item ha sido retirado!
-
-ViewItemFull_browse_to_item_not_in_range = Entered value does not exist.
 
 #
 # View Item
@@ -248,11 +248,11 @@ Yearbook_ReleaseError = Error while closing Yearbook
 
 Yearbook_ReleasedSuccessfully = Yearbook was closed successfully.
 
+Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
+
 Yearbook_SubmitError = Error while submitting Yearbook
 
 Yearbook_SubmittedSuccessfully = Yearbook was submitted successfully.
-
-Yearbook_RemovedItemsFromYearbook = Item(s) removed from yearbook
 
 Yearbook_allItemsValid = All Items are valid
 
@@ -260,29 +260,29 @@ Yearbook_createdSuccessfully = Yearbook was created successfully and can now be 
 
 Yearbook_creationError = Error while creating Yearbook or the related User-Group. Please try again later or contact Pubman Support.
 
-Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
-
-Yearbook_noYearbookFound = No yearbook for your institute was found.
-
 Yearbook_deleteError = Error while trying to delete the yearbook
 
 Yearbook_editError = Error while trying to edit the yearbook
 
-Yearbook_noArchivedItems = No archived yearbooks were found
-
-Yearbook_sendBackForReworkError = Error while trying to send back for rework
+Yearbook_grantsAdded = Selected Users were authorized to collaborate on the Yearbook
 
 Yearbook_itemNotReleasedWarning = could not be released due to its state
 
-Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
-
 Yearbook_itemNotSentBackWarning = could not be sent back for rework due to its state
-
-Yearbook_reinitializeError = the yearbook could not be reinitialized correctly and thus could possibly be not actual
 
 Yearbook_loadArchive = To view previous yearbooks, please visit the 
 
+Yearbook_noArchivedItems = No archived yearbooks were found
+
 Yearbook_noItemsSelected = You have not made any selection
+
+Yearbook_noYearbookFound = No yearbook for your institute was found.
+
+Yearbook_reinitializeError = the yearbook could not be reinitialized correctly and thus could possibly be not actual
+
+Yearbook_revisedSuccessfully = Yearbook was successfully sent back for rework
+
+Yearbook_sendBackForReworkError = Error while trying to send back for rework
 
 basket_ItemsChanged = item(s) han cambiado su estado de forma que usted ya no est\u00E1 autorizado a ver la \u00FAltima versi\u00F3n. Estos items han sido retirados de su cesta temporalmente hasta que la \u00FAltima versi\u00F3n est\u00E9 disponible de nuevo.
 
@@ -319,6 +319,8 @@ deleteItemsFromBasket_NoItemSelected = Por favor seleccione al menos un item par
 #
 deleteMessage = \u00BFEst\u00E1 seguro de que quiere eliminar este item?
 
+depositorWE_noOpenContextsAvailable = No open context available.
+
 depositorWS_ManyItemsSelected = Por favor seleccione un \u00FAnico item.
 
 depositorWS_NoItemSelected = Por favor seleccione un item.
@@ -354,8 +356,6 @@ depositorWS_sortingNotSupported = El criterio de ordenaci\u00F3n seleccionado'$1
 depositorWS_valNoItemsMsg = No tiene item en el estado seleccionado.
 
 depositorWS_wrongItemState = Uno o m\u00E1s items no est\u00E1n en el estado  correcto para esta acci\u00F3n.
-
-depositorWE_noOpenContextsAvailable = No open context available.
 
 easy_submission_ExternalLocators = Adem\u00E1s puede referenciar material complementario localizado externamente proporcionando la URL a continuaci\u00F3n.
 
@@ -647,28 +647,30 @@ searchResultList_QueryString = Su interrogaci\u00F3n exacta ha sido:
 
 search_NoCriteria = No se ha proporcionado criterio de b\u00FAsqueda. Por favor utilice un criterio de b\u00FAsqueda v\u00E1lido y repita.
 
+search_ParenthesisNotClosed = [NEW] Please close opened parenthesis
+
 # Search Error
 search_ParseError = La expresi\u00F3n de b\u00FAsqueda contiene caracteres ilegales ej. ", * or ? en posici\u00F3n inicial.
 
 search_TechnicalError = Se ha producido un error t\u00E9cnico mientras se procesaba la interrogaci\u00F3n de b\u00FAsqueda.
+
+toolsMoreInformation = Further information can be found here:
 
 #
 # Tools
 #
 toolsOverview = Here is an overview of the available tools and interfaces.
 
-toolsMoreInformation = Further information can be found here:
+userAccountOptions_DifferentPasswords = The passwords are not identically!
+
+userAccountOptions_PasswordUpdated = Password changed!
 
 #
 # UserAccountOptions
 #
 userAccountOptions_UserInformation = Overview over the user account
 
-userAccountOptions_PasswordUpdated = Password changed!
-
-userAccountOptions_DifferentPasswords = The passwords are not identically!
-
-userAccountOptions_emptyPassword = Your password couldn\u0039t be updated, because it was empty!
+userAccountOptions_emptyPassword = Your password couldn9t be updated, because it was empty!
 
 #
 # Common
