--- a/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_de.properties
@@ -191,7 +191,7 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: beliebiger Volltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Volltext
 
 ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Verlagsvertrag
 
@@ -209,7 +209,7 @@ ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Inhaltsverzeichnis
 
 ENUM_CONTENTCATEGORY_abstract = Zusammenfassung
 
-ENUM_CONTENTCATEGORY_any-fulltext = beliebiger Volltext
+ENUM_CONTENTCATEGORY_any-fulltext = Volltext
 
 ENUM_CONTENTCATEGORY_copyright-transfer-agreement = Verlagsvertrag
 
