--- a/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/nims/Label_en.properties
@@ -191,7 +191,7 @@ ENUM_ALTERNATIVETITLETYPE_OTHER = Other
 
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
-ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Any fulltext
+ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: fulltext
 
 ENUM_CONTENTCATEGORY_COPYRIGHT_TRANSFER_AGREEMENT = Deprecated: Copyright transfer agreement
 
@@ -209,7 +209,7 @@ ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Table of contents
 
 ENUM_CONTENTCATEGORY_abstract = Abstract
 
-ENUM_CONTENTCATEGORY_any-fulltext = Any fulltext
+ENUM_CONTENTCATEGORY_any-fulltext = fulltext
 
 ENUM_CONTENTCATEGORY_copyright-transfer-agreement = Copyright transfer agreement
 
