Resolved [PUBMAN-2420]: Basket should be limited to 3500 Items (over 3500 an exception is thrown because of the request-length).
Former-commit-id: 61a00b2f57fc7aa5e67e45ba9348b297b35dd6d9

--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -343,6 +343,8 @@ basket_SingleAlreadyInBasket = The item is already in the basket.
 
 basket_SingleRemovedSuccessfully = The item was removed from the basket.
 
+basket_MaximumSizeReached = The limit of publications in the basket is exceeded.
+
 chooseWorkspace = Please choose a workspace to edit the items.
 
 copyright = \u00A9 2007 Max Planck Society
