--- a/pubman/pubman_presentation/src/main/resources/Messages_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_es.properties
@@ -303,6 +303,8 @@ basket_SingleAlreadyInBasket = El item est\u00E1 ya en la cesta.
 
 basket_SingleRemovedSuccessfully = El item ha sido retirado de la cesta.
 
+basket_MaximumSizeReached = The limit of publications in the basket is exceeded.
+
 chooseWorkspace = Please choose a workspace to edit the items.
 
 copyright = EOI
