--- a/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_ja.properties
@@ -337,6 +337,8 @@ basket_SingleAlreadyInBasket = \u3053\u306E\u30A2\u30A4\u30C6\u30E0\u306F\u3059\
 
 basket_SingleRemovedSuccessfully = The item was removed from the basket.
 
+basket_MaximumSizeReached = The limit of publications in the basket is exceeded.
+
 chooseWorkspace = \u30A2\u30A4\u30C6\u30E0\u7BA1\u7406\u753B\u9762\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 
 copyright = \u00A9 2007 Max Planck Society
