PUBMAN-2414 fixed: Change label for special journal issue
Former-commit-id: e22c822da9aead42557e38de5548bcc54821ce90

--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_de.properties
@@ -364,7 +364,7 @@ ENUM_GENRE_FESTSCHRIFT = Festschrift
 
 ENUM_GENRE_HANDBOOK = Handbuch
 
-ENUM_GENRE_ISSUE = Sonderheft
+ENUM_GENRE_ISSUE = Heft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
@@ -1957,7 +1957,7 @@ adv_search_lblChkGenre_festschrift = Festschrift
 
 adv_search_lblChkGenre_handbook = Handbuch
 
-adv_search_lblChkGenre_issue = Sonderheft
+adv_search_lblChkGenre_issue = Heft
 
 adv_search_lblChkGenre_journal = Zeitschrift
 
