--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_en.properties
@@ -364,7 +364,7 @@ ENUM_GENRE_FESTSCHRIFT = Festschrift
 
 ENUM_GENRE_HANDBOOK = Handbook 
 
-ENUM_GENRE_ISSUE = Special Journal Issue
+ENUM_GENRE_ISSUE = Issue
 
 ENUM_GENRE_JOURNAL = Journal
 
@@ -1956,7 +1956,7 @@ adv_search_lblChkGenre_festschrift = Festschrift
 
 adv_search_lblChkGenre_handbook = Handbook
 
-adv_search_lblChkGenre_issue = Special Journal Issue
+adv_search_lblChkGenre_issue = Issue
 
 adv_search_lblChkGenre_journal = Journal
 
