--- a/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
+++ b/pubman/pubman_presentation/src/main/resources/mpg/Label_es.properties
@@ -352,7 +352,7 @@ ENUM_GENRE_FESTSCHRIFT = Festschrift
 
 ENUM_GENRE_HANDBOOK = Manual 
 
-ENUM_GENRE_ISSUE = N\u00FAmero especial 
+ENUM_GENRE_ISSUE = N\u00FAmero
 
 ENUM_GENRE_JOURNAL = Revista
 
@@ -1905,7 +1905,7 @@ adv_search_lblChkGenre_conferencerep = Informe de Conferencia
 
 adv_search_lblChkGenre_courseware = Ense\u00F1anza
 
-adv_search_lblChkGenre_issue = N\u00FAmero especial
+adv_search_lblChkGenre_issue = N\u00FAmero
 
 adv_search_lblChkGenre_journal = Revista
 
